fix: spacing and sizes

--- a/src/styles/github.module.css
+++ b/src/styles/github.module.css
@@ -3,7 +3,6 @@
 }
 
 .title {
-  display: block;
   margin-bottom: 0.5em;
   padding-bottom: 0.5em;
   font-size: 150%;
@@ -25,8 +24,14 @@
 
 .subtitle {
   display: block;
-  font-size: 110%;
+  font-size: 112.5%;
   font-weight: 600;
+}
+
+.description {
+  display: block;
+  font-size: 100%;
+  line-height: 150%;
 }
 
 .time {
@@ -45,7 +50,3 @@
   background: var(--primary-color);
 }
 
-.description {
-  display: block;
-  line-height: 1.6em;
-}
