--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -4,7 +4,7 @@
 
 .logo {
   display: inline-block;
-  font-size: 310%;
+  font-size: 400%;
   font-weight: 600;
   line-height: 100%;
   color: var(--secondary-color);
