--- a/src/styles/sidebar.module.css
+++ b/src/styles/sidebar.module.css
@@ -14,13 +14,13 @@
 
 .name {
   margin-bottom: 0.5em;
-  font-size: 100%;
+  font-size: 112.5%;
   font-weight: 600;
 }
 
 .description {
   margin-bottom: 1em;
-  font-size: 90%;
+  font-size: 87.5%;
   font-weight: 400;
 }
 
